# AndreiNet-Neural-Network-Framework

./: .gitignore  andreiNet_edu.cpp  andreiNet_gui.py  anime.py  training_loss_eigen.txt  tst_ai.py
andreiNet 1.0/utils/: net.h
andreiNet 1.1/experimental/: demoCrossEnt.cpp  run_demo.bat  run_network_viz.bat  visualize_ce.py  visualize_network.py
andreiNet 1.1/tensorflow_experimental/: main.py
andreiNet 1.1/tstht/: index.html  script.js  style.css
andreiNet 1.2 (exp)/: andreinet_py.cp310-win_amd64.pyd  requirements.txt  run.bat  setup.py
andreiNet 1.2 (exp)/bindings/: bindings.cpp
andreiNet 1.2 (exp)/python_gui/: app.py
andreiNet 1.2 (exp)/src/: test1.cpp  training_loss.txt
andreiNet 1.2 (exp)/utils/: andreinet.h  includes.h  layer.h  net.h  timer.h  util.h
andreiNet 1.2.5 Final/: andreinet_py.cp310-win_amd64.pyd  run.bat  setup.py
andreiNet 1.2.5 Final/bindings/: CMakeLists.txt  bindings.cpp
andreiNet 1.2.5 Final/datasets/: two_moons_data.csv
andreiNet 1.2.5 Final/python_gui/: app.py
andreiNet 1.2.5 Final/src/: test2.cpp  training_loss.txt
andreiNet 1.2.5 Final/utils/: andreinet.h  demo.cpp  includes.h  layer.h  net.h  node.h  timer.h  util.h
andreiNet 1.3 exp/src/: test1.cpp  training_loss_eigen.txt
andreiNet 1.3 exp/utils/: includes.h  layer.h  (+2 more)
andreiNet 1.4 exp/: andreinet_bindings.cp310-win_amd64.pyd  andreinet_bindings.cp312-win_amd64.pyd  requirements.txt  setup.py  training_loss_eigen.txt
experiment2/: main.cpp
others/: TUM.py  cv_ubb.txt  date.txt  tempCodeRunnerFile.cpp  thrd.cpp  tst.cpp  tst.py  tst2.py
python/: data.txt
(+268 files in other folders)
